# VoxelNet_Multilabel_MasterThesis

./: README.md  config.py  parse_log.py  test.py  train.py
Master_thesis_report/: Thesis_report_suri_RR_LAB.pdf:Zone.Identifier
kitti_eval/: evaluate_object_3d.cpp  evaluate_object_3d_offline  evaluate_object_3d_offline.cpp  launch_test.sh
model/: __init__.py  group_pointcloud.py  model.py  rpn.py  setup.py
save_model/pre_trained_pedestrian_cyclist/: checkpoint-00606904.index
utils/: box_overlaps.c  colorize.py  data_aug.py  kitti_loader.py  preprocess.py  utils.py
visual_utils/: visualize_utils.py
voxelization/: CMakeLists.txt
voxelization/src/: load_graphs.cpp  load_graphs.hpp  load_model.hpp  main.cpp  utils.hpp  voxelization_cpu.cpp  voxelization_cpu.hpp
